<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayoutDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <Button
            android:id="@+id/goBackWorkerDetails"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="5dp"
            android:background="@drawable/back" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/ime_radnika"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/name_worker_view"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/prezime_radnika"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/lastname_worker_view"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/uloga_radnika"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/type_worker_view"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/placa_radnika"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/salary_worker_view"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />

            <Button
                android:id="@+id/saveWorker"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/spremi"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
