<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <Button
            android:id="@+id/goBackProduct"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/back" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ime_proizvoda"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/name_product_view_add"
                android:layout_width="160dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cijena_proizvoda"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/price_product_view_add"
                android:layout_width="160dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/addProduct"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/dodaj"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>