<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayoutDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <Button
            android:id="@+id/goBackProductDetails"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/back" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_view_product"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_margin="5dp"
                android:src="@drawable/image_not_found" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/ime_i_opis_proizvoda"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/name_product_view"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/cijena_proizvoda"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/price_product_view"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />

            <Button
                android:id="@+id/editProduct"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/spremi"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
